--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+
+<!-- Copyright -->
+
 	<title>An example Web Site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
