--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 
 <!-- Copyright -->
 
-	<title>An example Web Site</title>
+	<title>Great web site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Some interesting ...
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git 2014</p>
 	</footer>
 </body>
 </html>
