add text for rebase

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
 
-<!-- Copyright -->
+<!-- Copyright 
+	changes from rebase
+-->
 
 	<title>Great web site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
