add text for rebase conflict 2

--- a/simple.html
+++ b/simple.html
@@ -3,6 +3,7 @@
 
 <!-- Copyright 
 	changes from rebase
+	AAAAAAAA
 -->
 
 	<title>Great web site</title>
@@ -20,6 +21,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			TTTTTT
 		</p>
 	</main>
 	<footer class="container">
