--- a/simple.html
+++ b/simple.html
@@ -23,7 +23,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Master Company 2014</p>
+		<p>&copy; AAAAA Master Company 2014</p>
 	</footer>
 </body>
 </html>
