remote: changes for pull

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         </div><!--/.navbar-collapse -->
       </div>
     </div>
+        
+    <div>
+        BLA BLA BLA
+        </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
