--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 <!-- Copyright 
 -->
 
-	<title>Updated title</title>
+	<title>Updated title 222</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
